Рефакторинг после замечаний ревьюера.